--- a/model/labs/labs_2025/lab_04/report/05-design.tex
+++ b/model/labs/labs_2025/lab_04/report/05-design.tex
@@ -1,213 +1,51 @@
-% посмотреть как можно редактировать интервалы вывода графиков в зависимости от закона распределения
+\chapter{Законы распределения}
 
-\chapter{Равномерное распределение}
-
-Говорят, что непрерывная случайная величина $X$ имеет \textit{равномерное распределение} на отрезке~$[a,~b]$ ($a, b \in (-\infty, +\infty)$) , если ее функция плотности распределения~$f(x)$ равна:
-
-\begin{equation}
-	f(x) =
-	\begin{cases}
-		\displaystyle\frac{1}{b - a}, & x \in [a, b];\\
-		0,  & \quad \text{иначе}.
-	\end{cases}
-\end{equation}
-
-При этом функция распределения~$F(x)$ равна:
-
-\begin{equation}
-	F(x) =
-	\begin{cases}
-		0,  & \quad x < a;\\
-		\displaystyle\frac{x - a}{b - a}, & x \in [a, b];\\
-		1,  & \quad x > b.
-	\end{cases}
-\end{equation}
-
-Обозначение: $X \sim R[a, b]$.
-
-Математическое ожидание:
-
-\begin{equation}
-	M[X] = \frac{a + b}{2}
-\end{equation}
-
-Дисперсия: 
-
-\begin{equation}
-	D[X] = \frac{(b - 2)^2}{12}
-\end{equation}
-
-\chapter{Распределение Эрланга} % проверил
-
-Говорят, что непрерывная случайная величина $X$ имеет \textit{распределения Эрланга} c параметрами $\lambda$ и $k$ ($\lambda > 0; k = 0, 1, 2, ...$) если ее плотность распределения~$f_k(x)$ равна:
-
-\begin{equation}
-	f_k(x) =
-	\begin{cases}
-		 \frac{\lambda^{k} \cdot x^{k-1}}{(k-1)!} \cdot e^{-\lambda \cdot x}, & x \ge 0;\\
-		 0,  & \text{иначе}.
-	\end{cases}
-\end{equation}
-
-
-При этом функция распределения~$F_k(x)$ равна:
-
-\begin{equation}
-	F_k(x) =
-	\begin{cases}
-		 1 - e^{-\lambda \cdot x} \cdot \sum_{i = 0}^{k-1} \frac{(\lambda \cdot x)^i}{i!}, & x \ge 0;\\
-		 0,  & \text{иначе}.
-	\end{cases}
-\end{equation}
-
-\textbf{Физический смысл распределения} --- вероятность того, что в пуассоновском процессе $k$-e событие произойдёт через заданный промежуток времени.
-
-\textbf{Физический смысл параметров:}
-
+Время прихода заявки из источника информации и время освобождения обслуживающего аппарата может изменяться по одному из следующих пяти законов распределения со следующими формулами вычисления моментов времени $t_i$:
 \begin{itemize}
-	\item  $\lambda$ --- среднее количество событий за фиксированный промежуток времени (интенсивность);
+	\item равномерное распределение;
 	
-	\item $k$ --- количество событий.
+	\begin{equation}
+		t_i = a + (b - a)R_i
+	\end{equation}
+	
+	\item распределение Эрланга;
+	
+	\begin{equation}
+		t_i = -\frac{1}{k\lambda} \sum_{i=1}^{k} \ln(1 - R_i)
+	\end{equation}
+	
+	\item распределение Пуассона --- относится к дискретному с мат. ожиданием и дисперсией, равной $\lambda > 0$. 
+	Для генерирования пуассоновских переменных используется метод точек, в основе которого лежит генерирование случайной переменной $R_i$, равномерно распределенной на [0, 1], до тех пор, пока не будет выполнено следующее соотношение:
+	
+	\begin{equation}
+		\prod_{i=0}^{x} R_i \ge e^{-\lambda} > \prod_{i=0}^{x+1} R_i
+	\end{equation}
+	
+	\item экспоненециальное распределение;
+	
+	\begin{equation}
+		t_i = \frac{1}{\lambda} \ln(1 - R_i)
+	\end{equation}
+	
+	\item нормальное распределение.
+	
+	\begin{equation}
+		t_i = \sigma \sqrt\frac{12}{n}(\sum\limits_{i=1}^{n} R_i - \frac{n}{2}) + m,
+	\end{equation}
+	
 \end{itemize}
 
-% распределение Эрланга — это распределение суммы k независимых экспоненциально распределённых величин.
 
-% иначе говоря, это распределение времени до k-го события пуассоновского процесса с интенсивностью λ. 
+\chapter{Принцип $\Delta t$}
+Принцип $\Delta t$ заключается в последовательном анализе состояний всех блоков в момент времени $t + \Delta t$ по заданному состоянию блоков в момент времени $t$. 
+При этом новое состояние блоков определяется в соответствии с их алгоритмическим описанием с учетом действующих случайных факторов. 
+В результате этого анализа принимается решение о том, какие общесистемные события должны имитироваться программой на данный момент времени.
 
-% распределения Эрланга и Пуассона дополняют друг друга: в то время как распределение Пуассона подсчитывает события, происходящие за фиксированный промежуток времени, распределение Эрланга подсчитывает время до наступления фиксированного количества событий. При k = 1 распределение упрощается до экспоненциального распределения.
+Основной недостаток принципа $\Delta t$ заключается в значительных затратах вычислительных ресурсов, а при недостаточно малом $\Delta t$ появляется опасность пропуска отдельных событий в системе, исключающая возможность получения правильных результатов при моделировании.
 
-Математическое ожидание:
+\chapter{Событийный принцип}
 
-\begin{equation}
-	M[X] = \frac{k}{\lambda}
-\end{equation}
+Состояния отдельных устройств изменяется в дискретные моменты времени, совпадающие с моментами поступления сообщений в систему, окончания реализации задания, поэтому моделирование и продвижение текущего времени в системе удобно проводить, используя событийных принцип.
 
-Дисперсия: 
-
-\begin{equation}
-	D[X] = \frac{k}{\lambda^2}
-\end{equation}
-
-\chapter{Распределение Пуассона} % проверил
-
-Говорят, что  дискретная случайная величина $X$ имеет \textit{распределение Пуассона} с параметром $\lambda > 0$, если $X$ принимает значения $0, 1, 2, \dots$ с вероятностями:
-
-\begin{equation}
-	P\{X=k\} = \frac{\lambda^k}{k!} e^{-\lambda}, k \in \mathbb{N}_0.
-\end{equation}
-
-Функция распределения: 
-
-\begin{equation}
-	F(x) = \sum\limits_{i = 0}^{x} \frac{\lambda^i}{i!} e^{-\lambda}
-\end{equation}
-
-\textbf{Физический смысл распределения} --- вероятность наступления заданного числа событий, произошедших за фиксированное время, при условии, что данные события происходят с некоторой фиксированной средней интенсивностью и независимо друг от друга.
-
-\textbf{Физический смысл параметра $\lambda$} --- среднее количество событий за фиксированный промежуток времени (интенсивность).
-
-% 3 критерия: события независимы, среднее количество событий в единицу времени постоянно, события не происходят одновременно
-
-% это закон редких событий: наблюдаем события, которые редки сами по себе (например, звонок отдельного человека в колл-центр), но когда мы наблюдаем большое число таких событий (например, сидя в колл-центре). Количество звонков получается своего рода сумма большого количества редких событий
-
-% lambda --- произведение вероятности того, что в единицу времени (мб минуту, секунду) произойдет событие на общую длину временного интервала [так как события независимы].
-
-% пример использования: например известно, сколько раз в месяц в среднем падает сайт. Это lambda. Чтобы посчитать, с какой вероятностью сайт не упадет ни разу за месяц (k = 0), нужно использовать формулу распределения Пуассона.
-
-Обозначение: $X \sim \Pi(\lambda)$.
-
-Математическое ожидание:
-
-\begin{equation}
-	M[X] = \lambda
-\end{equation}
-
-Дисперсия: 
-
-\begin{equation}
-	D[X] = \lambda
-\end{equation}
-
-\chapter{Экспоненциальное распределение} % проверил
-
-Говорят, что  непрерывная случайная величина $X$ имеет \textit{экспоненциальное (показательное) распределение} с параметром $\lambda > 0$, если ее функция плотности распределения~$f(x)$ имеет вид:
-
-\begin{equation}
-	f(x) =
-	\begin{cases}
-		\lambda \exp(-\lambda x), & x \ge 0;\\
-		0,  & \text{иначе}.
-	\end{cases}
-\end{equation}
-
-Функция распределения: 
-
-\begin{equation}
-	F(x) = 
-	\begin{cases}
-		1 - \exp(-\lambda x), & x > 0;\\
-		0,  & \text{иначе}.
-	\end{cases}
-\end{equation}
-
-\textbf{Физический смысл распределения} --- вероятность того, что в пуассоновском процессе следующее событие произойдёт через заданный промежуток времени.
-
-\textbf{Физический смысл параметра $\lambda$} --- среднее количество событий за фиксированный промежуток времени (интенсивность).
-
-% критерии: события независимы
-
-% экспоненциальное распределение моделирует время или расстояние между событиями в пуассоновском процессе.
-
-% это распределение моделирует время между двумя последовательными свершениями одного и того же события.
-
-% lambda --- произведение вероятности того, что в единицу времени (мб минуту, секунду) произойдет событие на общую длину временного интервала [так как события независимы].
-
-Обозначение: $X \sim \mathrm{Exp}(\lambda)$.
-
-Математическое ожидание:
-
-\begin{equation}
-	M[X] = \frac{1}{\lambda}
-\end{equation}
-
-Дисперсия: 
-
-\begin{equation}
-	D[X] = \frac{1}{\lambda^2}
-\end{equation}
-
-\chapter{Нормальное распределение}
-
-Говорят, что  непрерывная случайная величина $X$ имеет \textit{нормальное распределение} с параметром $\mu$ и $\sigma^2$, если ее функция плотности распределения~$f(x)$ имеет вид:
-
-\begin{equation}
-	f(x) = \frac{1}{\sqrt{2\pi} \sigma} \exp\Bigg( -\frac{(x - \mu)^2}{2\sigma^2} \Bigg), \space x \in \mathbb{R}_0
-\end{equation}
-
-Функция распределения: 
-
-\begin{equation}
-	F(x) = \frac{1}{\sigma \sqrt{2\pi}} \int_{-\infty}^{x} e^{ -\frac{(t - \mu)^2}{2\sigma^2} } \, dt
-\end{equation}
-
-\textbf{Геометрический смысл параметров:}
-
-\begin{itemize}
-	\item  $\mu$ --- отвечает за локализацию точки максимума функции $f(x)$ (и оси симметрии);
-	
-	\item $\sigma$ --- отвечает за концентрацию значений в районе точки $X=\mu$. Чем меньше $\sigma$, тем выше концентрация.
-\end{itemize}
-
-Обозначение: $X \sim \mathrm{N}(\mu, \sigma^2)$.
-
-Математическое ожидание:
-
-\begin{equation}
-	M[X] = \mu
-\end{equation}
-
-Дисперсия: 
-
-\begin{equation}
-	D[X] = \sigma^2
-\end{equation}
+При использовании данного принципа состояние всех блоков имитационной модели анализируется лишь в момент появления какого-либо события. 
+Момент наступления следующего события определяется минимальными значениями из списка будущих событий, представляющего собой совокупность моментов ближайшего изменения состояний каждого из блока системы.
