--- a/model/labs/labs_2025/lab_04/report/report.tex
+++ b/model/labs/labs_2025/lab_04/report/report.tex
@@ -10,9 +10,9 @@
 {Информатика и системы управления} % Название факультета
 {Программное обеспечение ЭВМ и информационные технологии}
 % Название кафедры
-{лабораторной работа №3} % Название работы (в дат. падеже)
+{лабораторной работа №4} % Название работы (в дат. падеже)
 {Моделирование} % Название курса (необязательный аргумент)
-{Функции распределения и плотности распределения} % Тема работы
+{Моделирование работы простейшей СМО} % Тема работы
 {} % Номер варианта (необязательный аргумент)
 {Лысцев~Н.~Д./ИУ7-73Б} % Номер группы
 {Рудаков~И.~В.} % ФИО студента
