--- a/model/labs/labs_2025/lab_04/report/04-analysis.tex
+++ b/model/labs/labs_2025/lab_04/report/04-analysis.tex
@@ -1,11 +1,4 @@
 \chapter{Техническое задание}
 
-Написать программу с графическим интерфейсом, которая позволяет строить графики функции распределения вероятностей и функции плотности распределения вероятностей, а также выводить математическое ожидание и дисперсию случайных величин, распределенных по следующим законам:
-
-\begin{itemize}
-	\item равномерное распределение;
-	\item распределение Эрланга;
-	\item распределение Пуассона;
-	\item экспоненциальное распределение;
-	\item нормальное распределение.
-\end{itemize}
+Написать программу с графическим интерфейсом, которая позволяет промоделировать систему, состоящую из генератора, буферной памяти и обслуживающего аппарата, событийным принципам и принципом $\Delta t$ с целью выяснения оптимальной длины очереди (отсутствие потери сообщения в ней). 
+Определенный процент обработанных сообщений снова поступают в очередь.
