nir is in progress

--- a/model/labs/labs_2025/lab_04/report/04-analysis.tex
+++ b/model/labs/labs_2025/lab_04/report/04-analysis.tex
@@ -1,4 +1,4 @@
 \chapter{Техническое задание}
 
-Написать программу с графическим интерфейсом, которая позволяет промоделировать систему, состоящую из генератора, буферной памяти и обслуживающего аппарата, событийным принципам и принципом $\Delta t$ с целью выяснения оптимальной длины очереди (отсутствие потери сообщения в ней). 
+Написать программу с графическим интерфейсом, которая позволяет промоделировать систему, состоящую из генератора, буферной памяти и обслуживающего аппарата, событийным принципом и принципом $\Delta t$ с целью определения оптимальной длины очереди (отсутствие потери сообщения в ней). 
 Определенный процент обработанных сообщений снова поступают в очередь.
