--- a/model/labs/labs_2025/lab_04/report/05-design.tex
+++ b/model/labs/labs_2025/lab_04/report/05-design.tex
@@ -1,6 +1,7 @@
 \chapter{Законы распределения}
 
 Время прихода заявки из источника информации и время освобождения обслуживающего аппарата может изменяться по одному из следующих пяти законов распределения со следующими формулами вычисления моментов времени $t_i$:
+
 \begin{itemize}
 	\item равномерное распределение;
 	
@@ -14,7 +15,7 @@
 		t_i = -\frac{1}{k\lambda} \sum_{i=1}^{k} \ln(1 - R_i)
 	\end{equation}
 	
-	\item распределение Пуассона --- относится к дискретному с мат. ожиданием и дисперсией, равной $\lambda > 0$. 
+	\item распределение Пуассона --- относится к дискретному с мат. ожиданием и дисперсией, равными $\lambda > 0$. 
 	Для генерирования пуассоновских переменных используется метод точек, в основе которого лежит генерирование случайной переменной $R_i$, равномерно распределенной на [0, 1], до тех пор, пока не будет выполнено следующее соотношение:
 	
 	\begin{equation}
@@ -27,7 +28,7 @@
 		t_i = \frac{1}{\lambda} \ln(1 - R_i)
 	\end{equation}
 	
-	\item нормальное распределение.
+	\item нормальное распределение. Для упрощения $n = 12$
 	
 	\begin{equation}
 		t_i = \sigma \sqrt\frac{12}{n}(\sum\limits_{i=1}^{n} R_i - \frac{n}{2}) + m,
