--- a/nir/research/03-introduction.tex
+++ b/nir/research/03-introduction.tex
@@ -1,2 +1,24 @@
 \chapter*{ВВЕДЕНИЕ}
 \addcontentsline{toc}{chapter}{ВВЕДЕНИЕ}
+
+Данный НИР посвящен предметной области человеко-машинного взаимодействия (ЧМВ), а именно роботам- и программам-собеседникам (далее --- диалоговым системам, ДС). В данной области считается~\cite{ronzhin2006speech}, что повышению эффективности ЧМВ способствует использование наиболее естественных для человека средств коммуникации. Здесь наблюдается, с одной стороны, перенос людьми своих ожиданий с межличностной коммуникации на ЧМВ и, с другой стороны, использование мультимодальной коммуникации, в том числе аффективной. Функциональность ДС бывает следующих видов, исходя из решаемых ими задач \cite{Volkova2023_dialogue_systems}.
+
+\begin{itemize}
+	\item Функция выполнения команд --- передача пользователем команды с помощью различных каналов передачи и мультимодальным/унимодальным ответом ДС;
+
+	\item Функция ответа на вопросы --- построение ДС смысла переданного высказывания на естественном языке и формирование ответа, понятного пользователю;
+	
+	\item Коммуникативная функция --- люди вступают в коммуникацию не только ради передачи информации, но и для выражения эмоций, демонстрации личностного отношения и получения обратной эмоциональной реакции от собеседника;
+	
+	\item Социальная функция --- применение ДС и роботов-собеседников для поддержки эмоционального состояния людей;
+	
+	\item Образовательная функция --- использование ДС как средство автоматизации образовательного процесса;
+	
+	\item Развлекательная функция --- роботы-собеседники, созданные для развлечения людей;
+	
+	\item Исследовательская функция --- использование ДС для исследования различных аспектов ЧМВ и человеко-человеческого взаимодействия.
+\end{itemize}
+
+Ограничение данной работы --- это применимость в рамках развлекательной, образовательной и социальной функциональности ДС.
+
+В данной НИР будет проведен обзор существующих подходов к описанию персональных черт (ПОПЧ), а также обзор существующих решений (ДС), в которых применены различные ПОПЧ. 
