--- a/nir/research/04-analysis.tex
+++ b/nir/research/04-analysis.tex
@@ -1,10 +1,3 @@
-\chapter{Введение}
-
-Данный НИР посвящен предметной области человеко-машинной взаимодействия (ЧМВ), а именно роботам- и программам-собеседникам (далее --- диалоговым системам, ДС). В данной области считается~\cite{Ronzhin-Karpov-Li}, что повышению эффективности ЧМВ способствует использование наиболее естественных для человека средств коммуникации. Здесь наблюдается, с одной стороны, перенос людьми своих ожиданий с межличностной коммуникации на ЧМВ и, с другой стороны, использование мультимодальной коммуникации, в том числе аффективной. Функциональность ДС бывает ... ~\cite{Волкова Л.Л. О функциональности диалоговых систем... ?Лингвистика и Лингводидактика в неязыковом вузе...}. Ограничение данной работы --- это применимость в рамках развлекательной, образовательной и социальной функциональности ДС.
-
-В данной НИР будет проведен обзор существующих подходов к описанию персональных черт (ПОПЧ), а также обзор существующих решений (ДС), в которых применены различные ПОПЧ. 
-
-
 \chapter{Аффективная робототехника}
 
 Развитие роботизированных технологий влечёт за собой неизбежное возникновение вопросов, связанных с взаимодействием человека и робота, а также с восприятием робота как полноценного участника этого взаимодействия.
@@ -19,11 +12,9 @@
 	\item \textbf{Образование:} роботы помогают в обучении детей, моделировании явлений, дистанционном участии в уроках и поддержке учителей, выполняя вспомогательные и интерактивные функции \cite{affect-rob-in-edu}.
 	
 	\item \textbf{Работа с клиентами:} роботы всё чаще применяются в сферах с активным человеческим взаимодействием — например, в аэропортах, музеях, отелях и ресторанах \cite{affect-rob-in-serv}.
-	
-	\item и др. \textcolor{red}{?????} \cite{affect-rob-in-other-fields}.
 \end{itemize}
 
 
-\textbf{Цель аффективной робототехники} -- приблизить взаимодействие человека с машиной к человеческому опыту и восприятию, полученному в межличностном взаимодействии. В частности, средством достижения этой цели может быть введение такой функциональности роботов, которая позволит роботам обмениваться с людьми не только информацией, но и аффективной составляющей её восприятия --- аналогом эмоциональной окраски информации человеком или его отношения к ней. Для формирования такого человеко-машинного взаимодействия потребуется придать роботам способность распознавать и интерпретировать человеческие эмоции и/или проявлять социальное и эмоциональное поведение \cite{affect-rob-goal}.
+\textbf{Цель аффективной робототехники} --- приблизить взаимодействие человека с машиной к человеческому опыту и восприятию, полученному в межличностном взаимодействии \cite{affect-rob-in-serv}. В частности, средством достижения этой цели может быть введение такой функциональности роботов, которая позволит роботам обмениваться с людьми не только информацией, но и аффективной составляющей её восприятия --- аналогом эмоциональной окраски информации человеком или его отношения к ней. Для формирования такого человеко-машинного взаимодействия потребуется придать роботам способность распознавать и интерпретировать человеческие эмоции и/или проявлять социальное и эмоциональное поведение.
 
 
