--- a/nir/research/06-implementation.tex
+++ b/nir/research/06-implementation.tex
@@ -1,40 +1,45 @@
 \chapter{Подходы к описанию персональных черт}
 
-Способ описания личности человека путём выделения некоторого набора черт занимает особое место в психологии личности, поскольку позволяет систематически характеризовать индивидуальные различия между людьми. 
+\textbf{Черта} --- это диспозиция (склонность) вести себя определенным образом, которая проявляется в поведении человека в широком спектре ситуаций~\cite{PervinJohn2001Personality}.
 
-\textbf{Черта личности (персональная черта)} --- это устойчивая предрасположенность человека реагировать, думать и чувствовать определённым образом, то есть проявлять характерные типы поведения, эмоций и мыслей в разных ситуациях \cite{PervinJohn2001Personality}.
+Рассматривая подходы к описанию личности человека посредством выделения некоторого набора персональных черт, нужно упомянуть что такая концепция личности имеет иерархический характер, то есть такие черты  можно упорядочить по уровням обобщённости: от самых общих, определяющих глобальные тенденции поведения --- \textbf{суперфакторы} (например, экстраверсия, нейротизм) до более частных и конкретных, проявляющихся в специфических ситуациях (например, общительность, разговорчивость, тревожность). 
+Иными словами, черты высшего уровня включают в себя множество взаимосвязанных характеристик нижнего уровня, образуя многоуровневую структуру, где верхние уровни задают общие направления поведения, а нижние --- их конкретные формы проявления~\cite{PervinJohn2001Personality}.
 
-\section{Личностные черты по Г.Оллпорту}
+\section{Личностные черты по Г. У. Олпорту}
 
-Г. Оллпорт разделил персональные черты человека на три уровня \cite{PervinJohn2001Personality}:
-
-\begin{itemize}
-	\item \textbf{кардинальные} --- представляют собой доминирующие диспозиции, которые пронизывают всю жизнь человека и проявляются практически во всех его действиях. Они определяют общий стиль поведения личности и становятся её ведущей характеристикой;
-	
-	\item \textbf{центральные} --- основные характеристики, описывающие поведение человека в повседневной жизни. К ним относятся такие качества, как честность, доброта, общительность, настойчивость. Эти черты формируют основу личности и определяют привычные способы взаимодействия с окружающими;
-	
-	\item \textbf{вторичные} --- являются менее устойчивыми и проявляются в ограниченных ситуациях. Они отражают индивидуальные предпочтения, привычки и вкусы, которые могут меняться в зависимости от обстоятельств.
-\end{itemize}
-
-Предложенная Оллпортом классификация позволяет рассматривать личность как систему иерархически организованных черт, различающихся по степени выраженности и влияния на поведение.
-
-\clearpage
-
-\section{Трехфакторная теория Ганса Ю. Айзенка}
-
-В результате дважды проведенного факторного анализа Aйзенк выделил 3 базовых параметра личности, каждый  имеющий под собой биологическую основу: 
+В выделенных Г. У. Олпортом уровнях черт прослеживается следующая иерархия~\cite{PervinJohn2001Personality}:
 
 \begin{itemize}
-	\item экстраверсия-интроверсия;
+	\item \textbf{кардинальные черты} --- доминирующие диспозиции, которые пронизывают всю жизнь человека и проявляются практически во всех его действиях, определяют общий стиль поведения личности и становятся её ведущей характеристикой. 
+	Примером может послужить макиавеллизм, авторитаризм, садизм;
 	
-	\item невротизм;
+	\item \textbf{центральные черты} --- основные характеристики, описывающие поведение человека в повседневной жизни. 
+	К ним относятся такие качества, как честность, доброта, общительность, настойчивость. 
+	Эти черты формируют основу личности и определяют привычные способы взаимодействия с окружающими;
 	
-	\item психотизм.
+	\item \textbf{вторичные черты} --- менее устойчивые черты, проявляющиеся в ограниченных ситуациях. 
+	Они отражают индивидуальные предпочтения, привычки и вкусы, которые могут меняться в зависимости от обстоятельств.
 \end{itemize}
 
- Айзенк также разработал множество вопросников для измерения личности по этим параметрам: Личностный список модели, Личностный список Айзенка, Личностный вопросник Айзенка \cite{PervinJohn2001Personality}.
+Г. У. Олпорт утверждал, что черта личности --- аспект, позволяющий понять, как человек обычно ведет себя в многих ситуациях, но это не значит того, что поведение человека будет таким же в какой-то определенной ситуации.
+Поэтому для полного понимания поведения индивида необходимо также вводит понятие \textbf{ситуации} для объяснения различных реакций~\cite{PervinJohn2001Personality}.
 
-\section{Подход Раймонда Б. Кэттела}
+Насмотря на проведенную теоретическую работу, Олпорт почти не проводил никаких исследований на выявление каких-либо конкретных черт человека~\cite{PervinJohn2001Personality}.
+
+\section{Трехфакторная теория Г. Ю. Айзенка}
+
+В результате дважды проведенной процедуры факторного анализа Г. Ю. Aйзенк выделил 2 базовых параметра личности --- \textbf{экстраверсия} и \textbf{нейротизм}. 
+Каждый параметр имеет два полюса, характеризующих различные степени выраженности черты (экстраверсия --- интроверсия, нейротизм --- эмоциональная стабильность) \cite{theory_of_personality_eysenck}.
+
+Айзенк описывает человека с высоким уровнем экстраверсии как общительного, импульсивного, активного, в то время как интроверт рассматривается как человек замкнутый, любящий уединение. Обладатели высокого уровня нейротизма склонны часто испытывать тревогу, беспокойство когда его низкий уровень говорит о спокойствии, уравновешенности, сдержанности \cite{theory_of_personality_eysenck}.
+
+Впоследствие к этим двум параметрам личности был добавлен третий --- \textbf{психотизм}, высокий уровень которого характеризует человека как холодного, равнодушного к другим, противника общепринятных социальных норм, склонного к риску \cite{theory_of_personality_eysenck}.
+
+Каждый из вышеперечисленных параметров имеет под собой билогический базис. Биологической основой нейротизма считается лимбическая система, отвечающая за возникновение эмоций и активацию симпатической нервной системы. Экстраверсия связана с другой мозговой структурой — восходящей ретикулярной активирующей системой (ВРАС), или ретикулярной формацией, регулирующей уровень общей мозговой активности. Психотизм, в свою очередь, обусловлен влиянием мужских гормонов и других биохимических факторов, включая уровень серотонина \cite{theory_of_personality_eysenck}.
+
+Айзенк также разработал множество вопросников для измерения личности по этим параметрам: Личностный список модели, Личностный список Айзенка, Личностный вопросник Айзенка \cite{PervinJohn2001Personality}.
+
+\section{Подход Р. Б. Кэттела}
 
 В рамках своей теории он предложил две классификации личностных черт. Согласно первой, черты делятся на \cite{PervinJohn2001Personality}:
  
@@ -51,10 +56,11 @@
 \begin{itemize}
 	\item \textbf{поверхностные черты} --- наблюдаемые особенности поведения, которые внешне кажутся взаимосвязанными, но не обязательно имеют общую причину. Они выявляются субъективными методами, например опросами и самооценками;
 	
-	\item \textbf{черты темперамента} --- представляют собой фундаментальные структуры личности, стоящие за наблюдаемыми проявлениями. Они выявляются с помощью факторного анализа и отражают реальные взаимосвязи между различными аспектами поведения. Именно глубинные черты, по Кэттеллу, образуют основу личности и служат её «строительными блоками».
+	\item \textbf{глубинные черты} --- представляют собой фундаментальные структуры личности, стоящие за наблюдаемыми проявлениями. Они выявляются с помощью факторного анализа и отражают реальные взаимосвязи между различными аспектами поведения. Именно глубинные черты, по Кэттеллу, образуют основу личности и служат её «строительными блоками».
 \end{itemize}
 
-Основное внимание исследователь уделял разработке опросников, в частности знаменитого теста 16PF, однако стремился продемонстрировать, что те же факторы выявляются и при использовании оценок внешних наблюдателей, и объективных методик.
+Для обнаружения глубинных черт личности Кэттелом была проведена огромная работа по изучению трех основных источников данных --- данные о реальном поведении, данные, получаемые из опросников, в также данные поведенческих тестов \cite{PervinJohn2001Personality, theory_of_personality_cattell}. Для выделения черт Кеттелом многократно применялся статистический метод факторного анализа. 
+В результате было выделено 16 факторов, для измерения которых был создан 16-факторный опросник (16 Р.F.) \cite{cattell_questionnaire}.
 
 \section{Большая пятерка}
 
@@ -116,48 +122,68 @@ MBTI широко используется в сфере личностного 
 	\item \textbf{ISTJ} — надёжный и системный исполнитель, ценящий порядок и ответственность.
 \end{itemize}
 
-\begin{table}[!h]
+\chapter{Сравнение подходов к описанию персональных черт}
+
+В качестве критериев сравнения ПОПЧ были взяты следующие.
+
+\begin{itemize}
+	\item \textbf{K1} --- применимость данного подхода при моделировании различного поведения персонажей ДС или роботов-собеседников;
+	
+	\item \textbf{K2} --- вариативность моделируемых личностей;
+	
+	\item \textbf{K3} --- наличие теста или опросника для определения типа личности исходя из соотношения тех или иных черт.
+	
+\end{itemize}
+
+
+\begin{table}[h]
 	\begin{center}
 		\small
 		\begin{threeparttable}
 			\caption{Сравнение подходов к описанию персональных черт}
-			\label{tbl:exist_sol}
+			\label{tbl:exist_sol_transposed}
 			\begin{tabular}{|p{5cm}|c|c|c|c|c|}
 				\hline
-				Критерий сравнения & Оллпорт & Айзенк & Кэттел & \makecell{Большая \\ пятёрка} & MBTI   \\
+				Подход & \textbf{К1} & Надежность? & \textbf{К2} & \textbf{К3} \\ 
 				\hline
-				Применимость в моделировании поведения & - & - & - & + & - \\ 
+				Оллпорт & - & Высокая & Высокая & - \\ 
 				\hline
-				Надёжность & Высокая & Высокая & Средняя & Высокая & Низкая \\ 
+				Айзенк & - & Высокая & Высокая & + \\ 
 				\hline
-				Вариативность моделируемых личностей & Высокая & Высокая & Высокая & Высокая & \makecell{Ограничена \\ 16 типами} \\ 
+				Кэттел & - & Средняя & Высокая & + \\ 
 				\hline
-				Наличие теста или опросника для определения типа личности & - & + & + & + & + \\
+				Большая пятёрка & + & Высокая & Высокая & + \\ 
+				\hline
+				MBTI & - & Низкая & Ограничена 16 типами & + \\ 
 				\hline
 			\end{tabular}
 		\end{threeparttable}			
 	\end{center}
 \end{table}
 
+
+
 Все подходы к описанию личностных черт, за исключением MBTI, позволяют описать произвольное число личностей (персонажей) на основе варьирования значений конкретных параметров. Так, конкретная черта (параметр модели) может быть задана как бинарная, тернарная (значения: низкое, среднее, высокое), на основе иной шкалы (например, с 7 делениями~\cite{}), на основе соотношения вклада черт в характер (пример: 10~\% той-то черты, ...соотношение, можно со ссылкой). %это отчет о какой-то строке таблицы
+
+
 
 
 % обобщить обзор решений, применяющих конкретные подходы к описанию персональных черт (ПОПЧ) в виде таблице решения x подходы. Это ещё и классификация рассмотренных решений (программ, роботов, статей, описывающих исследования о моделировании поведения с учетом персональных черт) по ПОПЧ (например, в статье с Kismet-подобной головой явно применен подход на основе описанных И.Павловым свойств нервной системы: амплитуда реакций, сила реакций)
 
-Если бы это было деревом, было бы так:
-- На основе фундаментальных свойств нервной системы (на основе типологии Павлова)
-- На основе сочетания черт, выделенных психологами
--- Большая пятёрка черт, Олпорт, Айзенк*
-% БПЧ сама по себе (агрегированный, гибридный подход)
-% Олпорт
-% Айзенк
--- Кэттел
-- (Иное) Недетерминированный (статистический?? но статистика может быт ьв разных подходах, вопрос лишь в наличии/отсутствии блока принятия решений непосредственно перед использованием статистических данных) подход на основе воспроизведения конкретных элементов поведения на основе статистических данных об их использовании конкретным прототипом персонажа: "персонажи" Алисы (голос + типовые фразы в некотором кол-ве --- они м.б. предварительно записаны диктором, а затем воспроизведены или сымитированы), дипфейки сюда же
+%Если бы это было деревом, было бы так:
+%- На основе фундаментальных свойств нервной системы (на основе типологии Павлова)
+%- На основе сочетания черт, выделенных психологами
+%-- Большая пятёрка черт, Олпорт, Айзенк*
+%% БПЧ сама по себе (агрегированный, гибридный подход)
+%% Олпорт
+%% Айзенк
+%-- Кэттел
+%- (Иное) Недетерминированный (статистический?? но статистика может быт ьв разных подходах, вопрос лишь в наличии/отсутствии блока принятия решений непосредственно перед использованием статистических данных) подход на основе воспроизведения конкретных элементов поведения на основе статистических данных об их использовании конкретным прототипом персонажа: "персонажи" Алисы (голос + типовые фразы в некотором кол-ве --- они м.б. предварительно записаны диктором, а затем воспроизведены или сымитированы), дипфейки сюда же
 %"недетерминированное": чаще всего нет закона в программе, который бы описывал целеориентированное и/или обусловленное влиянием персональных черт поведение (а не просто в виде правила if (вход = <шаблон в навыке навигатора Алисы>) then <вывести фразу спортивного комментатора>)
 % Применимость есть для воспроизведения речевых паттернов, свойственных какому-то персонажу (присказки "-дон", "пу-пу-пу", мимика и жесты - специфичное подмигивание, междометия, подкручивание усов**), но это чисто внешняя сторона процесса порождения речи, а глубинные процессы, влияющие на принятие решения о выборе той или иной стратегии (или чуть ниже уровнем - сценария) поведения, нельзя смоделировать таким образом
 
 % в презентации дерево могло бы быть хорошей визуализацией предложенной в данном НИРе классификации подходов к описанию персональных черт
-
-* Айзенк и к биологии, и к психологии
-
-** Те же элементы поведения можно выбирать на основе разных механизмов. И есть разница в том, выбран ли элемент поведения "подмигнуть" по логике "в корпусе записей реакций персонаж Х подмигиавает в среднем раз в две минуты или же по логике "будем идти по паттерну <<заговорщицкое, обозначить, что по шкале свой-чужой собеседник помещается на полюс "свой">>. Последний, детерминированный, принцип отбора стратегий/сценариев/элементов коммуникативного поведения куда с меньшей вероятностью выдаст неуместную реакцию (что так или иначе оценивается респондентами), чем "слепая" статистика в недетерминированном подходе
+%
+%* Айзенк и к биологии, и к психологии
+%
+%** Те же элементы поведения можно выбирать на основе разных механизмов. И есть разница в том, выбран ли элемент поведения "подмигнуть" по логике "в корпусе записей реакций персонаж Х подмигиавает в среднем раз в две минуты или же по логике "будем идти по паттерну <<заговорщицкое, обозначить, что по шкале свой-чужой собеседник помещается на полюс "свой">>. Последний, детерминированный, принцип отбора стратегий/сценариев/элементов коммуникативного поведения куда с меньшей вероятностью выдаст неуместную реакцию (что так или иначе оценивается респондентами), чем "слепая" статистика в недетерминированном подходе
