--- a/nir/research/biblio.bib
+++ b/nir/research/biblio.bib
@@ -18,16 +18,6 @@
 	howpublished="Режим доступа: \url{https://www.sciencedirect.com/science/article/pii/S0278431923000567?casa_token=Y2PgonIgGjEAAAAA:yIguBAOOgS6COKBdTY8fk-DKSFK2yR-Xb0go3YOvcPXe7vyL4dK_kEW9OqyNyLtcNLAUdIOMKWEL} (дата обращения: 30.09.2025)."
 }
 
-@misc{affect-rob-in-other-fields,
-	title="Investigating the use experience of restaurant service robots: the cognitive–affective–behavioral framework [Электронный ресурс].",
-	howpublished="Режим доступа: \url{https://www.sciencedirect.com/science/article/pii/S0278431923000567?casa_token=Y2PgonIgGjEAAAAA:yIguBAOOgS6COKBdTY8fk-DKSFK2yR-Xb0go3YOvcPXe7vyL4dK_kEW9OqyNyLtcNLAUdIOMKWEL} (дата обращения: 30.09.2025)."
-}
-
-@misc{affect-rob-goal,
-	title="Investigating the use experience of restaurant service robots: the cognitive–affective–behavioral framework [Электронный ресурс].",
-	howpublished="Режим доступа: \url{https://www.sciencedirect.com/science/article/pii/S0278431923000567?casa_token=Y2PgonIgGjEAAAAA:yIguBAOOgS6COKBdTY8fk-DKSFK2yR-Xb0go3YOvcPXe7vyL4dK_kEW9OqyNyLtcNLAUdIOMKWEL} (дата обращения: 30.09.2025)."
-}
-
 @misc{def-of-affect-rob,
 	title="Affective Robotics For Wellbeing: A Scoping Review [Электронный ресурс].",
 	howpublished="Режим доступа: \url{https://ieeexplore.ieee.org/abstract/document/10085995} (дата обращения: 22.09.2025)."
@@ -175,4 +165,45 @@
 	pages     = {48--52},
 	publisher = {American College Personnel Association},
 	note      = {Available at \url{https://www.researchgate.net/publication/237675975_Measuring_the_MBTI_and_coming_up_short}}
+}
+
+@misc{theory_of_personality_eysenck,
+	title="Теория личности Айзенка [Электронный ресурс].",
+	howpublished="Режим доступа: \url{https://ieeexplore.ieee.org/abstract/document/10085995} (дата обращения: 01.11.2025)."
+}
+
+@misc{theory_of_personality_cattell,
+	title="Теория личности Реймонда Кеттела [Электронный ресурс].",
+	howpublished="Режим доступа: \url{https://bigenc.ru/c/teoriia-lichnosti-reimonda-kettella-bc594b} (дата обращения: 03.11.2025)."
+}
+
+@misc{cattell_questionnaire,
+	title="Тест Кеттелла, 16PF [Электронный ресурс].",
+	howpublished="Режим доступа: \url{https://psytests.org/multi/cat16pfA-run.html} (дата обращения: 03.11.2025)."
+}
+
+@book{ronzhin2006speech,
+	author       = {Ронжин, А. Л. and Карпов, А. А. and Ли, И. В.},
+	title        = {Речевой и многомодальный интерфейсы},
+	address      = {Москва},
+	publisher    = {Наука},
+	year         = {2006},
+	pages        = {170},
+	note         = {Ил.; 22 см. — (Информатика: неограниченные возможности и возможные ограничения)},
+	isbn         = {5-02-035254-3},
+	language     = {russian},
+	organization = {Российская академия наук}
+}
+
+@inproceedings{Volkova2023_dialogue_systems,
+	author    = {Волкова, Лилия Леонидовна},
+	title     = {О диалоговых системах и квалификации их функциональности},
+	booktitle = {Проблемы лингвистики и лингводидактики в неязыковом вузе : сборник материалов 5-ой международной научно-практической конференции, Москва, 15-16 декабря 2022 г.},
+	editor    = {—},
+	volume    = {1: Лингвистика},
+	pages     = {43--55},
+	year      = {2023},
+	address   = {Москва},
+	publisher = {Изд-во МГТУ им. Н. Э. Баумана},
+	isbn      = {978-5-7038-6167-7}
 }
