--- a/nir/research/research.tex
+++ b/nir/research/research.tex
@@ -13,7 +13,7 @@
 %\include{01-definitions}
 %\include{02-abbreviations}
 
-%\include{03-introduction}
+\include{03-introduction}
 \include{04-analysis}
 \include{05-design}
 \include{06-implementation}
